# cloud-cost-manager

./: .gitignore  Cargo.toml  README.md  accounts.example.json
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/aws-cost/: Cargo.toml
crates/aws-cost/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core-traits/: Cargo.toml
crates/core-traits/src/: lib.rs
ui/: .env.example  README.md  index.html  package-lock.json  package.json
ui/src/: App.jsx  api.js  styles.css
