[workspace]
resolver = "2"
members = [
  "crates/core-traits",
  "crates/aws-cost",
  "crates/cli", "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1.5"
aws-credential-types = "1.2"
aws-sdk-costexplorer = "1.44"
aws-sdk-iam = "1.42"
aws-sdk-organizations = "1.40"
aws-sdk-sts = "1.42"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
axum = "0.7"
http = "1.1"
hyper = { version = "1.5", features = ["server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
