[package]
name = "cloud-cost-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cloud-cost-core = { path = "../core-traits" }
cloud-cost-aws = { path = "../aws-cost" }
